# infodata

src/: CMakeDefinitions.txt  CMakeLists.txt  Utilities.txt  go  gotest  kruncher  records.vim  run  wip.ksh
src/db/: CMakeLists.txt  README.md  go.libdb  go.libdb.bkup  infoservice.cpp  main.cpp
src/db/auth/: CMakeLists.txt  infoxmlauth.cpp
src/db/records/: CMakeLists.txt  Makefile  cmake_install.cmake  recordset.cpp
src/db/site/: CMakeLists.txt  infodb.cpp  infoerrors.cpp  infoservice.cpp
src/inc/db/: CMakeLists.txt  Database.h
src/inc/db/auth/: CMakeLists.txt
src/inc/db/records/: CMakeLists.txt  recordset.h
src/inc/db/site/: CMakeLists.txt  PostProcessor.h  infodataservice.h
src/include/: CMakeLists.txt  hyper.h  hyperbase.h  hypertools.h  infobase.h  infoclient.h  infofigur.h  infokruncher.h  infoserver.h  infosignals.h  infosite.h  infosock.h  infossock.h  infostream.h  main.h  process.h  restsock.h  spinlock.h
src/include/db/: CMakeLists.txt  Database.h  DbCursor.h
src/include/db.trash/auth/: infoxmlauth.h
src/include/db.trash/site/: infodb.h
src/include/db/auth/: CMakeLists.txt  infoxmlauth.h
src/include/db/records/: CMakeLists.txt  Makefile  cmake_install.cmake  inforecords.h  recordset.h
src/include/db/site/: CMakeLists.txt  infodataservice.h  infodb.h
src/socks/: CMakeLists.txt  infoconsumer.cpp  infofigur.cpp  infokruncher.cpp  infoserver.cpp  infosite.cpp
src/text/: krest.xml
src/trash.inc/: CMakeLists.txt
